--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "npx webpack && jest",
-    "start": "node src/server/index.js"
+    "start": "node src/server/database/seed/postgres/attractions.js && node src/server/database/seed/postgres/tours.js && node src/server/database/seed/postgres/ToursAttractions.js && node src/server/index.js",
+    "seed" : "psql -U postgres < src/server/database/dataSchema/postgres.sql"
   },
   "repository": {
     "type": "git",
@@ -48,6 +49,7 @@
     "jest-enzyme": "^7.1.2",
     "jest-google-maps-mock": "^1.0.3",
     "mini-css-extract-plugin": "^0.9.0",
+    "mysql2": "^2.1.0",
     "node-sass": "^4.14.0",
     "nodemon": "^2.0.3",
     "pg": "^8.0.3",
