--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node src/server/index.js",
     "startstart": "node src/server/database/seed/postgres/attractions.js && node src/server/database/seed/postgres/tours.js && node src/server/database/seed/postgres/ToursAttractions.js",
     "seed" : "psql -U postgres < src/server/database/dataSchema/postgres.sql",
-    "seedCql": "cqlsh < src/server/database/dataSchema/cassandra.cql"
+    "seedCql": "cqlsh < src/server/database/dataSchema/cassandra.cql",
+    "k6": "k6 run k6/script.js"
   },
   "repository": {
     "type": "git",
