--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "npx webpack && jest",
     "start": "node src/server/index.js",
     "startstart": "node src/server/database/seed/postgres/attractions.js && node src/server/database/seed/postgres/tours.js && node src/server/database/seed/postgres/ToursAttractions.js",
-    "seed" : "psql -U postgres < src/server/database/dataSchema/postgres.sql",
+    "seed": "psql -U postgres < src/server/database/dataSchema/postgres.sql",
     "seedCql": "cqlsh < src/server/database/dataSchema/cassandra.cql",
     "k6": "k6 run k6/script.js"
   },
@@ -53,6 +53,7 @@
     "jest-google-maps-mock": "^1.0.3",
     "mini-css-extract-plugin": "^0.9.0",
     "mysql2": "^2.1.0",
+    "newrelic": "^6.8.0",
     "node-sass": "^4.14.0",
     "nodemon": "^2.0.3",
     "pg": "^8.0.3",
@@ -61,6 +62,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-scroll": "^1.7.16",
+    "redis": "^3.0.2",
     "sass-loader": "^8.0.2",
     "sequelize": "^5.21.7",
     "style-loader": "^1.2.1",
